updated celestial sphere

--- a/applied-mathematics/astronomy/celestial-sphere/celestial-sphere.tex
+++ b/applied-mathematics/astronomy/celestial-sphere/celestial-sphere.tex
@@ -8,14 +8,13 @@
 
     % CELESTIAL SPHERE
     \draw[thick] (0,0) circle (6cm);
-    \shade[ball color=blue!10!white, opacity=0.20
-    \] (0,0) circle (6cm);
+    \shade[ball color=blue!10!white, opacity=0.20] (0,0) circle (6cm);
 
     %\fill[fill=black] (0,0) circle (1pt);
     %\draw[dashed] (0,0 ) -- node[above]{$r$} (2,0);
 
     % EQUATOR
-    \draw[thick, color=darkgreen] (-6,0) arc (180:360:6cm and 1cm);
+    \draw[thick, color=green] (-6,0) arc (180:360:6cm and 1cm);
     \draw[thick, dashed, opacity=.6] (-6,0) arc (180:0:6cm and 1cm);
 
     % EARTH
