--- a/pure-mathematics/spaces/geometry/a-second-3d-coordinate-plane-on-a-sphere/a-second-3d-coordinate-plane-on-a-sphere.tex
+++ b/pure-mathematics/spaces/geometry/a-second-3d-coordinate-plane-on-a-sphere/a-second-3d-coordinate-plane-on-a-sphere.tex
@@ -1,28 +1,91 @@
-\documentclass[border=5mm]{standalone}
+\documentclass[border={150mm 150mm 150mm 150mm}]{standalone}
 \usepackage{tikz}
 \usepackage{tikz-3dplot}
 
 \begin{document}
 
-% DEFINE 3D COORDINATE FRAME (using tikz-3dplot)
+% DEFINE YOUR 3D COORDINATE FRAME / ORIENTATION (using tikz-3dplot)
 % Will set the orientation of x,y,z
+% Set polar coordinate. theta ( z -> phi) phi (x -> y) 
 % Syntax: \tdplotsetdisplay{\theta_d}{\phi_d}
-\tdplotsetmaincoords{70}{100}
+\tdplotsetmaincoords{60}{110}
 
 % SET SOME VARIABLES
+% Set sphere radius
 \pgfmathsetmacro{\sphereRadius}{1}
+% Set Polar (2d) Coordinates for New Coordinate System
+\pgfmathsetmacro{\vectorRadius}{.8}
+\pgfmathsetmacro{\vectorTheta}{30}
+\pgfmathsetmacro{\vectorPhi}{60}
 
 % USE tdplot_main_coords FOR YOUR DEFINED 3D COORDINATE FRAME
 % Coordinate transformation provided by tikz-3dplot
-\begin{tikzpicture}[scale=6, tdplot_main_coords]
+\begin{tikzpicture}[scale=8, tdplot_main_coords]
+
+    \coordinate (Origin) at (0,0,0);
+
+    % *************************************************************
+    % PART I - MAIN COORDINATE SYSTEM
 
     % SPHERE
-    \shadedraw[tdplot_screen_coords, ball color = white] (0,0) circle (\sphereRadius);
+    %\shadedraw[tdplot_screen_coords, ball color = white] (0,0) circle (\sphereRadius);
 
-    % X, Y, Z AXIS
-    \draw[thick,->] (0,0,0) -- (1.7,0,0) node[anchor=north east] {$x$};
-    \draw[thick,->] (0,0,0) -- (0,1.7,0) node[anchor=north west] {$y$};
-    \draw[thick,->] (0,0,-1.7) -- (0,0,1.7) node[anchor=south] {$z$};
+    % DRAW MAIN COORDINATE SYSTEM AXES - X, Y, Z AXIS
+    \draw[thick, color=black, ->] (0,0,0) -- (\sphereRadius,0,0) node[anchor=north east] {$x$};
+    \draw[thick, color=black, ->] (0,0,0) -- (0,\sphereRadius,0) node[anchor=north west] {$y$};
+    \draw[thick, color=black, ->] (0,0,0) -- (0,0,\sphereRadius) node[anchor=south] {$z$};
+
+    % DEFINE SECOND 3D COORDINATE FRAME / ORIENTATION (using tikz-3dplot)
+    % This defines Pxy, Pxz and Pyz that you may use.
+    % Syntax: \tdplotsetcoord{Coordinate name without parentheses}{r}{\theta}{\phi}
+    \tdplotsetcoord{P}{\vectorRadius}{\vectorTheta}{\vectorPhi}
+
+    % DRAW RED VECTOR FROM ORIGIN TO POINT P
+    \draw[very thick, color=red, ->] (Origin) -- (P);
+    % Draw dashed line
+    \draw[dashed, color=red] (Origin) -- (Pxy);
+    \draw[dashed, color=red] (Pxy) -- (P);
+
+    % DRAW THETA & PHI ANGLES TO RED VECTOR
+    % Syntax: \tdplotdrawarc[coordinate frame, draw options]{center point}{r}{angle}{label options}{label}
+    \tdplotdrawarc[color=green]{(Origin)}{\sphereRadius/5}{0}{\vectorPhi}{anchor=north, color=green}{$\phi$}
+    % Set the rotated coordinate system so the x'-y' plane lies within the
+    % "theta plane" of the main coordinate system
+    % Syntax: \tdplotsetthetaplanecoords{\phi}
+    \tdplotsetthetaplanecoords{\vectorPhi}
+    \tdplotdrawarc[tdplot_rotated_coords, color=green]{(Origin)}{\sphereRadius/2}{0}{\vectorTheta}{anchor=south west, color=green}{$\theta$}
+
+    % *************************************************************
+    % PART II - SECOND COORDINATE SYSTEM
+
+    % Set the rotated coordinate definition within display using a translation
+    % Coordinate and Euler angles in the "z(\alpha)y(\beta)z(\gamma)" euler rotation convention
+    % Syntax: \tdplotsetrotatedcoords{\alpha}{\beta}{\gamma}
+    \tdplotsetrotatedcoords{\vectorPhi}{\vectorTheta}{0}
+
+    % TRANSLATE ROTATED COORDINATE SYSTEM TO THE POINT P
+    % Syntax: \tdplotsetrotatedcoordsorigin{point}
+    \tdplotsetrotatedcoordsorigin{(P)}
+
+    % DRAW SECOND COORDINATE SYSTEM AXES (BLUE) - X, Y, Z AXIS
+    \draw[thick, color=blue, tdplot_rotated_coords, ->] (0,0,0) -- (\vectorRadius/2,0,0) node[anchor=north west]{$x'$};
+    \draw[thick, color=blue, tdplot_rotated_coords, ->] (0,0,0) -- (0,\vectorRadius/2,0) node[anchor=west]{$y'$};
+    \draw[thick, color=blue, tdplot_rotated_coords, ->] (0,0,0) -- (0,0,\vectorRadius/2) node[anchor=south]{$z'$};
+
+    % DRAW ORANGE VECTOR FROM ORIGIN TO POINT P (CAN'T DO WHAT WE DID ABOVE)
+    \draw[very thick,color=orange,tdplot_rotated_coords, ->] (0,0,0) -- (.2,.2,.2);
+    % Draw dashed line
+    \draw[dashed,color=orange,tdplot_rotated_coords] (0,0,0) -- (.2,.2,0);
+    \draw[dashed,color=orange,tdplot_rotated_coords] (.2,.2,0) -- (.2,.2,.2);
+
+    % DRAW THETA & PHI ANGLES TO ORANGE VECTOR
+    % Syntax: \tdplotdrawarc[coordinate frame, draw options]{center point}{r}{angle}{label options}{label}
+    \tdplotdrawarc[color=green, tdplot_rotated_coords]{(0,0,0)}{\sphereRadius/5}{0}{45}{anchor=north, color=green}{$\phi$}
+    % Set the rotated coordinate system so the x'-y' plane lies within the
+    % "theta plane" of the main coordinate system
+    % Syntax: \tdplotsetthetaplanecoords{\phi}
+    \tdplotsetrotatedthetaplanecoords{45}
+    \tdplotdrawarc[color=green, tdplot_rotated_coords]{(0,0,0)}{\sphereRadius/5}{0}{55}{anchor=south west, color=green}{$\theta$}
 
 \end{tikzpicture}
 
