--- a/pure-mathematics/spaces/geometry/a-second-3d-coordinate-plane-on-a-sphere/a-second-3d-coordinate-plane-on-a-sphere.tex
+++ b/pure-mathematics/spaces/geometry/a-second-3d-coordinate-plane-on-a-sphere/a-second-3d-coordinate-plane-on-a-sphere.tex
@@ -1,6 +1,7 @@
-\documentclass[border={150mm 150mm 150mm 150mm}]{standalone}
+\documentclass[border=5mm]{standalone}
 \usepackage{tikz}
 \usepackage{tikz-3dplot}
+\usetikzlibrary{positioning}
 
 \begin{document}
 
@@ -8,37 +9,55 @@
 % Will set the orientation of x,y,z
 % Set polar coordinate. theta ( z -> phi) phi (x -> y) 
 % Syntax: \tdplotsetdisplay{\theta_d}{\phi_d}
-\tdplotsetmaincoords{60}{110}
+\tdplotsetmaincoords{70}{120}
 
 % SET SOME VARIABLES
-% Set sphere radius
-\pgfmathsetmacro{\sphereRadius}{1}
-% Set Polar (2d) Coordinates for New Coordinate System
-\pgfmathsetmacro{\vectorRadius}{.8}
-\pgfmathsetmacro{\vectorTheta}{30}
-\pgfmathsetmacro{\vectorPhi}{60}
+
+    % Set sphere radius
+    \pgfmathsetmacro{\sphereRadius}{1}
+    
+    % Set Polar (2D) Coordinates for New Coordinate System
+    \pgfmathsetmacro{\vectorRadiusP}{.8}
+    \pgfmathsetmacro{\vectorThetaP}{30}
+    \pgfmathsetmacro{\vectorPhiP}{70}
 
 % USE tdplot_main_coords FOR YOUR DEFINED 3D COORDINATE FRAME
 % Coordinate transformation provided by tikz-3dplot
-\begin{tikzpicture}[scale=8, tdplot_main_coords]
-
-    \coordinate (Origin) at (0,0,0);
+\begin{tikzpicture}[scale=6, tdplot_main_coords]
 
     % *************************************************************
     % PART I - MAIN COORDINATE SYSTEM
+    % *************************************************************
 
-    % SPHERE
-    %\shadedraw[tdplot_screen_coords, ball color = white] (0,0) circle (\sphereRadius);
+    % DEFINE coordinates - the origin
+    \coordinate (Origin) at (0,0,0);
 
-    % DRAW MAIN COORDINATE SYSTEM AXES - X, Y, Z AXIS
-    \draw[thick, color=black, ->] (0,0,0) -- (\sphereRadius,0,0) node[anchor=north east] {$x$};
-    \draw[thick, color=black, ->] (0,0,0) -- (0,\sphereRadius,0) node[anchor=north west] {$y$};
-    \draw[thick, color=black, ->] (0,0,0) -- (0,0,\sphereRadius) node[anchor=south] {$z$};
+    % DRAW SPHERE ON 3D COORDINATE SYSTEM
+    \shadedraw[tdplot_screen_coords, ball color = white] (0,0) circle (\sphereRadius);
+
+    % DRAW SPHERE EQUATOR
+    \draw[thin, fill, color=white] (\sphereRadius,0,0) arc (0:360:\sphereRadius);
+    \draw[thin, color=black] (\sphereRadius,0,0) arc (0:360:\sphereRadius);
+    
+    % DRAW MAIN COORDINATE SYSTEM AXES - X, Y, Z AXIS WITH LABEL (NODE)
+    % Syntax: \draw[characteristics] (start point) -- (end point) node [anchor=position] {label};
+    \draw[thick, color=black, ->] (Origin) -- (\sphereRadius+.5,0,0) node[anchor=north east] {$x$};
+    \draw[thick, color=black, ->] (Origin) -- (0,\sphereRadius+.5,0) node[anchor=north west] {$y$};
+    \draw[thick, color=black, ->] (Origin) -- (0,0,\sphereRadius+.5) node[anchor=south] {$z$};
+    
+    % DRAW DOTS ON COORDINATES INTERSECTING SPHERE
+    \node at (\sphereRadius,0,0) [circle, color=black, fill, inner sep=1.5pt] {};
+    \node at (0,\sphereRadius,0) [circle, color=black, fill, inner sep=1.5pt] {};
+    \node at (0,0,\sphereRadius) [circle, color=black, fill, inner sep=1.5pt] {};
 
     % DEFINE SECOND 3D COORDINATE FRAME / ORIENTATION (using tikz-3dplot)
     % This defines Pxy, Pxz and Pyz that you may use.
     % Syntax: \tdplotsetcoord{Coordinate name without parentheses}{r}{\theta}{\phi}
-    \tdplotsetcoord{P}{\vectorRadius}{\vectorTheta}{\vectorPhi}
+    \tdplotsetcoord{P}{\vectorRadiusP}{\vectorThetaP}{\vectorPhiP}
+
+    % LABEL POINT P AND Q (usetikzlibrary{positioning})
+    \node at (P) [tdplot_screen_coords, circle, color=black, fill, inner sep=1.5pt] {};
+    \node at (P) [tdplot_screen_coords, color=black, above left = 1mm of P] {$P$};
 
     % DRAW RED VECTOR FROM ORIGIN TO POINT P
     \draw[very thick, color=red, ->] (Origin) -- (P);
@@ -48,44 +67,49 @@
 
     % DRAW THETA & PHI ANGLES TO RED VECTOR
     % Syntax: \tdplotdrawarc[coordinate frame, draw options]{center point}{r}{angle}{label options}{label}
-    \tdplotdrawarc[color=green]{(Origin)}{\sphereRadius/5}{0}{\vectorPhi}{anchor=north, color=green}{$\phi$}
+    \tdplotdrawarc[color=red]{(Origin)}{\sphereRadius/5}{0}{\vectorPhiP}{anchor=north, color=red}{$\phi$}
     % Set the rotated coordinate system so the x'-y' plane lies within the
     % "theta plane" of the main coordinate system
     % Syntax: \tdplotsetthetaplanecoords{\phi}
-    \tdplotsetthetaplanecoords{\vectorPhi}
-    \tdplotdrawarc[tdplot_rotated_coords, color=green]{(Origin)}{\sphereRadius/2}{0}{\vectorTheta}{anchor=south west, color=green}{$\theta$}
+    \tdplotsetthetaplanecoords{\vectorPhiP}
+    \tdplotdrawarc[tdplot_rotated_coords, color=red]{(Origin)}{\sphereRadius/4}{0}{\vectorThetaP}{anchor=south west, color=red}{$\theta$}
 
     % *************************************************************
     % PART II - SECOND COORDINATE SYSTEM
+    % *************************************************************
 
     % Set the rotated coordinate definition within display using a translation
     % Coordinate and Euler angles in the "z(\alpha)y(\beta)z(\gamma)" euler rotation convention
     % Syntax: \tdplotsetrotatedcoords{\alpha}{\beta}{\gamma}
-    \tdplotsetrotatedcoords{\vectorPhi}{\vectorTheta}{0}
+    \tdplotsetrotatedcoords{\vectorPhiP}{\vectorThetaP}{0}
 
     % TRANSLATE ROTATED COORDINATE SYSTEM TO THE POINT P
     % Syntax: \tdplotsetrotatedcoordsorigin{point}
     \tdplotsetrotatedcoordsorigin{(P)}
-
+    
+    % DRAW SECOND WHITE EQUATOR CIRCLE
+    \draw[tdplot_rotated_coords, thin, fill, color=white, opacity=0.5] (\sphereRadius/3,0,0) arc (0:360:\sphereRadius/3);
+    \draw[tdplot_rotated_coords, thin, color=black] (\sphereRadius/3,0,0) arc (0:360:\sphereRadius/3);
+    
     % DRAW SECOND COORDINATE SYSTEM AXES (BLUE) - X, Y, Z AXIS
-    \draw[thick, color=blue, tdplot_rotated_coords, ->] (0,0,0) -- (\vectorRadius/2,0,0) node[anchor=north west]{$x'$};
-    \draw[thick, color=blue, tdplot_rotated_coords, ->] (0,0,0) -- (0,\vectorRadius/2,0) node[anchor=west]{$y'$};
-    \draw[thick, color=blue, tdplot_rotated_coords, ->] (0,0,0) -- (0,0,\vectorRadius/2) node[anchor=south]{$z'$};
+    \draw[tdplot_rotated_coords, thick, color=blue, , ->] (0,0,0) -- (\vectorRadiusP/1.6,0,0) node[anchor=north west]{$x'$};
+    \draw[tdplot_rotated_coords, thick, color=blue, ->] (0,0,0) -- (0,\vectorRadiusP/1.6,0) node[anchor=west]{$y'$};
+    \draw[tdplot_rotated_coords, thick, color=blue, ->] (0,0,0) -- (0,0,\vectorRadiusP/1.6) node[anchor=south]{$z'$};
 
-    % DRAW ORANGE VECTOR FROM ORIGIN TO POINT P (CAN'T DO WHAT WE DID ABOVE)
-    \draw[very thick,color=orange,tdplot_rotated_coords, ->] (0,0,0) -- (.2,.2,.2);
+    % DRAW GREEN VECTOR FROM ORIGIN TO POINT P (CAN'T DO WHAT WE DID ABOVE)
+    \draw[tdplot_rotated_coords, very thick,color=green, ->] (0,0,0) -- (.2,.2,.2);
     % Draw dashed line
-    \draw[dashed,color=orange,tdplot_rotated_coords] (0,0,0) -- (.2,.2,0);
-    \draw[dashed,color=orange,tdplot_rotated_coords] (.2,.2,0) -- (.2,.2,.2);
+    \draw[tdplot_rotated_coords, dashed,color=green] (0,0,0) -- (.2,.2,0);
+    \draw[tdplot_rotated_coords, dashed,color=green] (.2,.2,0) -- (.2,.2,.2);
 
     % DRAW THETA & PHI ANGLES TO ORANGE VECTOR
     % Syntax: \tdplotdrawarc[coordinate frame, draw options]{center point}{r}{angle}{label options}{label}
-    \tdplotdrawarc[color=green, tdplot_rotated_coords]{(0,0,0)}{\sphereRadius/5}{0}{45}{anchor=north, color=green}{$\phi$}
+    \tdplotdrawarc[tdplot_rotated_coords, color=green]{(0,0,0)}{\sphereRadius/5}{0}{45}{anchor=north, color=green}{$\phi$}
     % Set the rotated coordinate system so the x'-y' plane lies within the
     % "theta plane" of the main coordinate system
     % Syntax: \tdplotsetthetaplanecoords{\phi}
     \tdplotsetrotatedthetaplanecoords{45}
-    \tdplotdrawarc[color=green, tdplot_rotated_coords]{(0,0,0)}{\sphereRadius/5}{0}{55}{anchor=south west, color=green}{$\theta$}
+    \tdplotdrawarc[tdplot_rotated_coords, color=green]{(0,0,0)}{\sphereRadius/5}{0}{55}{anchor=south west, color=green}{$\theta$}
 
 \end{tikzpicture}
 
