--- a/applied-mathematics/astronomy/celestial-sphere/celestial-sphere.tex
+++ b/applied-mathematics/astronomy/celestial-sphere/celestial-sphere.tex
@@ -5,48 +5,89 @@
 
 \begin{document}
 
-% DEFINE 3D COORDINATE FRAME (using tikz-3dplot)
+% DEFINE YOUR 3D COORDINATE FRAME / ORIENTATION (using tikz-3dplot)
 % Will set the orientation of x,y,z
+% Set polar coordinate. theta ( z -> phi) phi (x -> y) 
 % Syntax: \tdplotsetdisplay{\theta_d}{\phi_d}
-\tdplotsetmaincoords{70}{100}
+\tdplotsetmaincoords{70}{150}
 
 % SET SOME VARIABLES
-\pgfmathsetmacro{\sphereRadius}{1}
+
+    % Sphere radius
+    \pgfmathsetmacro{\sphereRadius}{1}
+
+    % Set Polar (2D) Coordinates for Ecliptic
+    \pgfmathsetmacro{\vectorRadiusEcliptic}{0}
+    \pgfmathsetmacro{\vectorThetaEcliptic}{23.5}
+    \pgfmathsetmacro{\vectorPhiEcliptic}{0}
+
+    % Set Polar (2D) Coordinates for Star
+    \pgfmathsetmacro{\vectorRadiusStar}{1}
+    \pgfmathsetmacro{\vectorThetaSar}{25}
+    \pgfmathsetmacro{\vectorPhiStar}{45}
 
 % USE tdplot_main_coords FOR YOUR DEFINED 3D COORDINATE FRAME
 % Coordinate transformation provided by tikz-3dplot
-\begin{tikzpicture}[scale=6,tdplot_main_coords]
+\begin{tikzpicture}[scale=6, tdplot_main_coords]
 
-    % SPHERE
-    \shadedraw[tdplot_screen_coords, ball color = white] (0,0) circle (\sphereRadius);
+    % DEFINE coordinates - the origin
+    \coordinate (Origin) at (0,0,0);
+    \coordinate (northCelestialPole) at (0,0,\sphereRadius);
+    \coordinate (southCelestialPole) at (0,0,-\sphereRadius);
+    \coordinate (springEquinox) at (0,\sphereRadius,0);
+    \coordinate (autumnEquinox) at (0,-\sphereRadius,0);
 
-    % X, Y, Z AXIS
-    \draw[thick,->] (0,0,0) -- (1.7,0,0) node[anchor=north east] {$x$};
-    \draw[thick,->] (0,0,0) -- (0,1.7,0) node[anchor=north west] {$y$};
-    \draw[thick,->] (0,0,-1.7) -- (0,0,1.7) node[anchor=south] {$z$};
+    % DRAW CELESTIAL SPHERE ON 3D COORDINATE SYSTEM
+    \shadedraw[tdplot_screen_coords] (0,0) circle (\sphereRadius);
 
-    % DOTS ON AXIS CROSSING SPHERE
-    \coordinate (coordX) at (\sphereRadius,0,0);
-    \coordinate (coordY) at (0,\sphereRadius,0);
-    \coordinate (coordZ) at (0,0,\sphereRadius);
-    \node at (coordX) [circle, color=green, fill,inner sep=1.5pt] {};
-    \node at (coordX) [color=black, below right = 1mm of coordX] {$Hi Jeff$};
-    \node at (coordY) [circle,color=green,fill,inner sep=1.5pt]{};
-    \node at (coordZ) [circle,fill,inner sep=1.5pt]{};
+    % DRAW MAIN COORDINATE SYSTEM AXES - X, Y, Z AXIS WITH LABEL (NODE)
+    % Syntax: \draw[characteristics] (start point) -- (end point) node [anchor=position] {label};
+    \draw[thick, color=black, ->] (Origin) -- (\sphereRadius+.5,0,0) node[anchor=north east] {$x$};
+    \draw[thick, color=black, ->] (Origin) -- (0,\sphereRadius+.5,0) node[anchor=north west] {$y$};
+    \draw[thick, color=black, ->] (Origin) -- (0,0,\sphereRadius+.5) node[anchor=south] {$z$};
+    \draw[dashed, color=black, ->] (Origin) -- (-\sphereRadius-.5,0,0);
+    \draw[dashed, color=black, ->] (Origin) -- (0,-\sphereRadius-.5,0);
+    \draw[dashed, color=black, ->] (Origin) -- (0,0,-\sphereRadius-.5);
 
-    %LABEL DOTS ON AXIS CROSSING SPHERE
+    % DRAW GREEN CELESTIAL EQUATOR & LABEL
+    % \draw[thin, fill, color=white] (\sphereRadius,0,0) arc (0:360:\sphereRadius);
+    \draw[dashed, thin, color=green!60!black] (\sphereRadius,0,0) arc (0:360:\sphereRadius);
+    \draw[thin, color=green!60!black] (\sphereRadius,0,0) arc (0:-20:\sphereRadius);
+    \draw[thin, color=green!60!black] (\sphereRadius,0,0) arc (0:150:\sphereRadius);
+    \node at (1,.7,0) [color=green!60!black] {Celestial Equator};
+    \node at (\sphereRadius,0,0) [circle, color=green!60!black, fill, inner sep=1.5pt] {};
+    \node at (-\sphereRadius,0,0) [circle, color=green!60!black, fill, inner sep=1.5pt] {};
 
-    % CELESTIAL EQUATOR
-    \draw[dashed, thick, color=green] (\sphereRadius,0,0) arc (0:360:\sphereRadius);
-    \draw[thick, color=green] (\sphereRadius,0,0) arc (0:110:\sphereRadius);
-    \draw[thick, color=green] (\sphereRadius,0,0) arc (0:-70:\sphereRadius);
+    % LABEL CELESTIAL POLES (WITH BLACK DOTS)
+    \node at (northCelestialPole) [circle, color=black, fill, inner sep=1.5pt] {};
+    \node at (northCelestialPole) [color=black, above right = 6mm] {North Celestial Pole};
+    \node at (southCelestialPole) [circle, color=black, fill, inner sep=1.5pt] {};
+    \node at (southCelestialPole) [color=black, below right = 6mm] {South Celestial Pole};
 
-    % LABEL CELESTIAL EQUATOR
-
-    % EARTH
+    % DRAW EARTH & LABEL EARTH
     \draw[thick] (0,0) circle (0.1cm);
-    \shade[ball color=blue!60!white,opacity=0.80] (0,0) circle (0.1cm);
+    \shade[ball color=blue!60!white, opacity=0.80] (0,0) circle (0.1cm);
+    \node at (Origin) [color=black, above left = 5mm of Origin] {Earth};
 
+    % SET ECLIPTIC COORDINATES
+    % Set the rotated coordinate definition within display using a translation
+    % Coordinate and Euler angles in the "z(\alpha)y(\beta)z(\gamma)" euler rotation convention
+    % Syntax: \tdplotsetrotatedcoords{\alpha}{\beta}{\gamma}
+    \tdplotsetrotatedcoords{\vectorPhiEcliptic}{\vectorThetaEcliptic}{0}
+
+    % DRAW RED ECLIPTIC & LABEL
+    % \draw[thin, fill, color=white] (\sphereRadius,0,0) arc (0:360:\sphereRadius);
+    \draw[tdplot_rotated_coords, dashed, thin, color=red!80!black] (\sphereRadius,0,0) arc (0:360:\sphereRadius);
+    \draw[tdplot_rotated_coords, thin, color=red!80!black] (\sphereRadius,0,0) arc (0:-20:\sphereRadius);
+    \draw[tdplot_rotated_coords, thin, color=red!80!black] (\sphereRadius,0,0) arc (0:160:\sphereRadius);
+    \node at (.9,.7,0) [tdplot_rotated_coords, color=red!80!black] {Ecliptic};
+
+    % LABEL ECLIPTIC (EQUINOX) POLES (WITH RED DOTS)
+    \node at (springEquinox) [tdplot_rotated_coords, circle, color=red!80!black, fill, inner sep=1.5pt] {};
+    \node at (springEquinox) [tdplot_rotated_coords, color=red!80!black, below = 6mm] {Spring Equinox};
+    \node at (autumnEquinox) [tdplot_rotated_coords, circle, color=red!80!black, fill, inner sep=1.5pt] {};
+    \node at (autumnEquinox) [tdplot_rotated_coords, color=red!80!black, above = 6mm] {Autumn Equinox};
+    
 \end{tikzpicture}
 
 \end{document}
