--- a/electrical-engineering/logic/d-flip-flop/d-flip-flop.tex
+++ b/electrical-engineering/logic/d-flip-flop/d-flip-flop.tex
@@ -1,6 +1,6 @@
 \documentclass{standalone}
 \usepackage{tikz}
-\usepackage[siunitx, RPvoltages]{circuitikzgit}
+\usepackage[siunitx, RPvoltages]{circuitikz}
 %\usepackage[]{circuitikz}
 
 \usetikzlibrary{positioning, arrows, shapes.gates.logic.US, shapes.gates.logic.IEC, calc}
