--- a/mathematics/applied/electrical-engineering/logic/d-flip-flop/d-flip-flop.tex
+++ b/mathematics/applied/electrical-engineering/logic/d-flip-flop/d-flip-flop.tex
@@ -14,7 +14,7 @@
         \node[] (d) at (0,0) {\normalsize $d$};
         \node[] (clk) at (0,-1.7) {\normalsize $clk$};
 
-        % AND (NOTE I'M USING 3 INPUTS)
+        % DFF
         \node[flipflop D, external pins width=0] (DFF) at ($(d) + (2,-.85)$) {\normalsize $dff_0$};
         \draw (d) -- (DFF.pin 1);
         \draw (clk) -- (DFF.pin 3);
