--- a/mathematics/applied/electrical-engineering/logic/priority-arbiter/priority-arbiter.tex
+++ b/mathematics/applied/electrical-engineering/logic/priority-arbiter/priority-arbiter.tex
@@ -1,33 +1,54 @@
 \documentclass{standalone}
 \usepackage{tikz}
-\usetikzlibrary{positioning, arrows, shapes.gates.logic.US, shapes.gates.logic.IEC, calc}
+\usepackage{amsmath}
+\usetikzlibrary{positioning, shapes.geometric, calc}
+
+% This is just a box with labels - Simple
+\tikzset{
+        priority-arbiter/.style={
+            regular polygon sides=4, draw, minimum size=3.0cm, very thick,
+            label={[anchor=west,  yshift=1.0cm]   left: {\normalsize REQ\_0}},
+            label={[anchor=west,  yshift=0.2cm]   left: {\normalsize REQ\_1}},
+            label={[anchor=west,  yshift=-0.6cm]  left: {\normalsize REQ\_2}},
+            label={[anchor=east,  yshift=1.0cm]   right:{\normalsize GNT\_0}},
+            label={[anchor=east,  yshift=0.2cm]   right:{\normalsize GNT\_1}},
+            label={[anchor=east,  yshift=-0.6cm]  right:{\normalsize GNT\_2}},
+            label={[anchor=south, xshift=-0.5cm]  below:{\normalsize CLK}},
+            label={[anchor=south, xshift=0.5cm]   below:{\normalsize RST}}
+        },
+}
 
 \begin{document}
 
-\resizebox{10cm}{5cm}{
+ \resizebox{10cm}{9cm}{
 
-    \begin{tikzpicture}[
-        % node distance=.2cm,
-        fulladder/.style={draw, minimum size=3cm,
-        label={[anchor=west]left:$c_\text{out}$},
-        label={[anchor=south]below:$s$},
-        label={[anchor=east]right:$c_\text{in}$},
-        label={[anchor=north]65:$b$},
-        label={[anchor=north]115:$a\vphantom{b}$},
-    }]
+    \begin{tikzpicture}[node distance=.2cm]
 
-        \node[fulladder] (a) {};
-        \node[fulladder, right=1cm of a] (b) {};
+        % DRAW NODES (I like to do them relative to each other)
+        \node[priority-arbiter] (PA)   at (0,0)                  {};
+        \node[]                 (req0) at ($(PA)+(-3.0,1.0)$)    {\normalsize $req\_0$};
+        \node[]                 (req1) at ($(PA)+(-3.0,0.2)$)    {\normalsize $req\_1$};
+        \node[]                 (req2) at ($(PA)+(-3.0,-0.6)$)   {\normalsize $req\_2$};
+        \node[]                 (gnt0) at ($(PA)+(3.0,1.0)$)     {\normalsize $gnt\_0$};
+        \node[]                 (gnt1) at ($(PA)+(3.0,0.2)$)     {\normalsize $gnt\_1$};
+        \node[]                 (gnt2) at ($(PA)+(3.0,-0.6)$)    {\normalsize $gnt\_2$};
+        \node[]                 (clk)  at ($(PA)+(-0.5,-3.0)$)   {\normalsize $clk$};
+        \node[]                 (rst)  at ($(PA)+(0.5,-3.0)$)    {\normalsize $rst$};
+        \node[]                 (name) at ($(PA)+(0, 2.5)$)      {\normalsize PRIORITY ARBITER};
 
-        \draw[<-] (a.115) --++(90:0.5cm) node [above] {$a_1$};
-        \draw[<-] (a.65) --++(90:0.5cm) node [above] {$b_1$};
-        \draw[<-] (b.115) --++(90:0.5cm) node [above] {$a_0$};
-        \draw[<-] (b.65) --++(90:0.5cm) node [above] {$b_0$};
-        \draw[<-] (b.east) --++(0:0.5cm) node [right] {$0$};
-        \draw[<-] (a.east) -- (b.west);
-        \draw[->] (a.west) --++(180:0.5cm) node [left] {$c$};
-        \draw[->] (a.south) --++(-90:0.5cm) node [below] {$s_1$};
-        \draw[->] (b.south) --++(-90:0.5cm) node [below] {$s_0$};
+        % CONNECT INPUTS
+        \draw [very thick] (req0) -- ($(req0)+(1.5,0)$);
+        \draw [very thick] (req1) -- ($(req1)+(1.5,0)$);
+        \draw [very thick] (req2) -- ($(req2)+(1.5,0)$);
+
+        % CONNECT OUTPUTS
+        \draw [very thick] ($(gnt0)+(-1.5,0)$) -- (gnt0);
+        \draw [very thick] ($(gnt1)+(-1.5,0)$) -- (gnt1);
+        \draw [very thick] ($(gnt2)+(-1.5,0)$) -- (gnt2);
+        
+        % CONNECT CLK AND RST
+        \draw [very thick] ($(clk)+(0,1.5)$) -- (clk);
+        \draw [very thick] ($(rst)+(0,1.5)$) -- (rst);
 
     \end{tikzpicture}
 }
