--- a/mathematics/applied/electrical-engineering/logic/d-flip-flop/d-flip-flop.tex
+++ b/mathematics/applied/electrical-engineering/logic/d-flip-flop/d-flip-flop.tex
@@ -4,23 +4,34 @@
 
 \usetikzlibrary{positioning, arrows, shapes.gates.logic.US, shapes.gates.logic.IEC, calc}
 
+% This is the d flip=flop from the circuitikz package
+\tikzset{
+        my-d-flip-flop/.style={
+            flipflop D, external pins width=0, thick
+        },
+}
+
 \begin{document}
 
 \resizebox{7cm}{5cm}{
 
-    \begin{circuitikz}[scale=0.8, transform shape]
+    \begin{circuitikz}[scale=1.0, transform shape]
 
-        %INPUTS
-        \node[] (d) at (0,0) {\normalsize $d$};
-        \node[] (clk) at (0,-1.7) {\normalsize $clk$};
+        % DRAW NODES (I like to do them relative to each other)
+        \node [my-d-flip-flop]  (DFF)  at (0,0)                    {\normalsize $dff_0$};
+        \node []                (D)    at ($(DFF)+(-2.0,.85)$)     {\normalsize $d$};
+        \node []                (CLK)  at ($(DFF)+(-2.2,-.85)$)    {\normalsize $clk$};
+        \node []                (Q)    at ($(DFF)+(2.0,.85)$)      {\normalsize $q$};
+        \node []                (QBAR) at ($(DFF)+(2.4,-.85)$)     {\normalsize $q\_bar$};
+        \node []                (NAME) at ($(DFF)+(0, 2.0)$)       {\Large \textbf {D FLIP-FLOP}};
 
-        % DFF
-        \node[flipflop D, external pins width=0] (DFF) at ($(d) + (2,-.85)$) {\normalsize $dff_0$};
-        \draw (d) -- (DFF.pin 1);
-        \draw (clk) -- (DFF.pin 3);
-        \draw (DFF.pin 6) -- node[above]{\normalsize $q$} ([xshift=1.5cm]DFF.pin 6);
-        \draw (DFF.pin 4) -- node[above]{\normalsize $q\_bar$} ([xshift=1.5cm]DFF.pin 4);
-        \node[above=of DFF] {\normalsize D FLIP-FLOP};
+        % CONNECT INPUTS
+        \draw [semithick] (D) -- (DFF.pin 1);
+        \draw [semithick] (CLK) -- (DFF.pin 3);
+
+        % CONNECT OUTPUTS
+        \draw [semithick] (DFF.pin 6) -- (Q);
+        \draw [semithick] (DFF.pin 4) -- (QBAR);
 
      \end{circuitikz}
 
