added E=mc^2 to show how to use math equations in .tex file

--- a/science/physical-science/physics/e-equals-mc-squared/e-equals-mc-squared.tex
+++ b/science/physical-science/physics/e-equals-mc-squared/e-equals-mc-squared.tex
@@ -1,10 +1,11 @@
-\documentclass[border=5mm]{standalone}
+\documentclass{article}
 \usepackage{amsmath}
 
+% Math Mode
 \begin{document}
 
-\begin{equation} \label{eu_eqn}
-    e^{\pi i} + 1 = 0
-\end{equation}
+    $$
+        E=mc^2
+    $$
 
 \end{document}
