--- a/science/physical-science/physics/e-equals-mc-squared/e-equals-mc-squared.tex
+++ b/science/physical-science/physics/e-equals-mc-squared/e-equals-mc-squared.tex
@@ -3,9 +3,13 @@
 
 % Math Mode
 \begin{document}
+\Large
+% \boldmath
 
-    $$
+    $$ 
+    \mathit { 
         E=mc^2
+    }
     $$
 
 \end{document}
