--- a/science/physical-science/physics/e-equals-mc-squared/e-equals-mc-squared.tex
+++ b/science/physical-science/physics/e-equals-mc-squared/e-equals-mc-squared.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[preview]{standalone}
 \usepackage{amsmath}
 
 % Math Mode
@@ -6,8 +6,8 @@
 \Large
 % \boldmath
 
-    $$ 
-    \mathit { 
+    $$
+    \mathit { % mathrm, mathit, mathbf, mathcal, mathnormal
         E=mc^2
     }
     $$
