--- a/mathematics/applied/electrical-engineering/logic/and-gate/and-gate.tex
+++ b/mathematics/applied/electrical-engineering/logic/and-gate/and-gate.tex
@@ -18,17 +18,17 @@
 
         %DRAW NODES (I like to do them relative to each other, In this case the AND gate)
         \node [my-and-gate]   (AND)  at (0,0)                  {};
-        \node []              (X)    at ($(AND)+(-2.0,.23)$)   {\normalsize $x$};
-        \node []              (Y)    at ($(AND)+(-2.0,-.23)$)  {\normalsize $y$};
-        \node []              (XY)   at ($(AND)+(2.0,0)$)      {\normalsize $xy$};
+        \node []              (a)    at ($(AND)+(-2.0,.23)$)   {\normalsize $a$};
+        \node []              (b)    at ($(AND)+(-2.0,-.23)$)  {\normalsize $b$};
+        \node []              (y)    at ($(AND)+(2.0,0)$)      {\normalsize $y$};
         \node []              (NAME) at ($(AND)+(0,1.0)$)      {\normalsize \textbf {AND GATE}};
 
         % CONNECT INPUTS
-        \draw [thick] (X) -- (AND.input 1);
-        \draw [thick] (Y) -- (AND.input 3);
+        \draw [thick] (a) -- (AND.input 1);
+        \draw [thick] (b) -- (AND.input 3);
 
         % CONNECT OUTPUTS
-        \draw [thick] (AND.output) -- (XY);
+        \draw [thick] (AND.output) -- (y);
 
     \end{tikzpicture}
 }
